2005-01-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	
2005-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: bug 163886/163947, from John Spray <jcs116@york.ac.uk>

2005-01-11  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Install gtk docs in a standard place that devhelp knows about. From Stephane LOEUILLET <LeRoutier@leroutier.net>
	
2004-12-22  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/moz-plugin.c: Fix bug #161823
	* Makefile.am: bug #158897, from <kou@cozmixng.org>
	
2004-11-29  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made markers work again and inherit from the context that they were specified in, not where they were invoked.
	
2004-11-18  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: rsvg-view now can optionally use the new GtkFileChooser instead of GtkFileSelection, depending on whether you have GTK 2.4 installed or not.
	
2004-11-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c: RSVG's convenience API should now be able to transparently handle remote files via gnome-vfs, if available.
	* rsvg.c: Some Win32/Unix path portability changes
	
2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-defs.c: Interfile vfs linking now implemented. Utility api automatically gives contextual information.
	
2004-11-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Refactored the image downloading code into a generic xlink:href downloading code.
	Caleb can now use this for linking.
	
2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-defs.c: Interfile linking now implemented. Can't yet use gnome-vfs

2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* everywhere: split RsvgHandle into two parts.
	* rsvg.c: made the image be rendered when get_pixbuf is actually called. 
	* rsvg-text.c: Large number of text improvements: formatting, alignment, whitespace handling and styling. 
	* everywhere: Number if inheritance fixes