@@ -1,3 +1,8 @@
+2005-01-28  Dom Lachowicz <cinamod@hotmail.com>
+
+	* moz-plugin/moz-plugin.c: Code cleanup, work toward getting the plugin
+	to print on Unix.
+	
 2005-01-18  Dom Lachowicz <cinamod@hotmail.com>
 
 	* configure.in: Bump version number
